Tango/DLL Files/TANGO DLL for Visual Studio VC++6.0 (32 Bit)/TangoLSX_API.h


TANGOAPI int TANGOCALL LSX_SetTargetWindow (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_GetSnapshotCount (int lLSID, int *plSnsCount);

TANGOAPI int TANGOCALL LSX_GetSnapshotPos (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_SetSnapshot (int lLSID, BOOL bASnapshot);

TANGOAPI int TANGOCALL LSX_SetSnapshotPar (int lLSID, BOOL bHigh, BOOL bAutoMode);

TANGOAPI int TANGOCALL LSX_SetTrigger (int lLSID, BOOL bATrigger);

TANGOAPI int TANGOCALL LSX_SetTriggerPar (int lLSID, int lAxis, int lMode, int lSignal, double dDistance);

TANGOAPI int TANGOCALL LSX_SetTrigCount (int lLSID, int lValue);

TANGOAPI int TANGOCALL LSX_GetSnapshotPosArray (int lLSID, int lIndex, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_SetCtrFastMoveOn (int lLSID);

TANGOAPI int TANGOCALL LSX_SetCtrFastMoveOff (int lLSID);

TANGOAPI int TANGOCALL LSX_GetTrigger (int lLSID, BOOL *pbATrigger);

TANGOAPI int TANGOCALL LSX_GetTriggerPar (int lLSID, int *plAxis, int *plMode, int *plSignal, double *pdDistance);

TANGOAPI int TANGOCALL LSX_GetTrigCount (int lLSID, int *plValue);

TANGOAPI int TANGOCALL LSX_GetSnapshot (int lLSID, BOOL *pbASnapshot);

TANGOAPI int TANGOCALL LSX_SetSnapshotFilter (int lLSID, int lTime);

TANGOAPI int TANGOCALL LSX_GetSnapshotFilter (int lLSID, int *plTime);

TANGOAPI int TANGOCALL LSX_GetSnapshotPar (int lLSID, BOOL *pbHigh, BOOL *pbAutoMode);