Tango/DLL Examples/Java/Tango_Example/src/components/TANGODLL.java


    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetTargetWindow (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @return
     */
    public int LSX_SetCtrFastMoveOff (int lLSID);

    /**
     *
     * @param lLSID
     * @return
     */
    public int LSX_SetCtrFastMoveOn (int lLSID);

    /**
     *
     * @param lLSID
     * @param plValue
     * @return
     */
    public int LSX_GetTrigCount (int lLSID, IntByReference plValue);

    /**
     *
     * @param lLSID
     * @param lValue
     * @return
     */
    public int LSX_SetTrigCount (int lLSID, int lValue);

    /**
     *
     * @param lLSID
     * @param pbATrigger
     * @return
     */
    public int LSX_GetTrigger (int lLSID, IntByReference pbATrigger);

    /**
     *
     * @param lLSID
     * @param bATrigger
     * @return
     */
    public int LSX_SetTrigger (int lLSID, boolean bATrigger);

    /**
     *
     * @param lLSID
     * @param plAxis
     * @param plMode
     * @param plSignal
     * @param pdDistance
     * @return
     */
    public int LSX_GetTriggerPar (int lLSID, IntByReference plAxis, IntByReference plMode, IntByReference plSignal, DoubleByReference pdDistance);

    /**
     *
     * @param lLSID
     * @param lAxis
     * @param lMode
     * @param lSignal
     * @param dDistance
     * @return
     */
    public int LSX_SetTriggerPar (int lLSID, int lAxis, int lMode, int lSignal, double dDistance);

    /**
     *
     * @param lLSID
     * @param pbASnapshot
     * @return
     */
    public int LSX_GetSnapshot (int lLSID, IntByReference pbASnapshot);

    /**
     *
     * @param lLSID
     * @param bASnapshot
     * @return
     */
    public int LSX_SetSnapshot (int lLSID, boolean bASnapshot);

    /**
     *
     * @param lLSID
     * @param plSnsCount
     * @return
     */
    public int LSX_GetSnapshotCount (int lLSID, IntByReference plSnsCount);

    /**
     *
     * @param lLSID
     * @param plTime
     * @return
     */
    public int LSX_GetSnapshotFilter (int lLSID, IntByReference plTime);

    /**
     *
     * @param lLSID
     * @param lTime
     * @return
     */
    public int LSX_SetSnapshotFilter (int lLSID, int lTime);

    /**
     *
     * @param lLSID
     * @param pbHigh
     * @param pbAutoMode
     * @return
     */
    public int LSX_GetSnapshotPar (int lLSID, IntByReference pbHigh, IntByReference pbAutoMode);

    /**
     *
     * @param lLSID
     * @param bHigh
     * @param bAutoMode
     * @return
     */
    public int LSX_SetSnapshotPar (int lLSID, boolean bHigh, boolean bAutoMode);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetSnapshotPos (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param lIndex
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetSnapshotPosArray (int lLSID, int lIndex, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);  
}